--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ h1 {
     margin: 10px; 
     text-align: center;
     padding-bottom: 10px;
+    border-radius: 5px;
 }
 
 h2 {
@@ -48,6 +49,15 @@ img {
     justify-content: space-between;
     padding: 0 20px;
 }
+
+button {
+    background-color: black;
+    color: white;
+    padding: 5px 15px;
+    font-family: 'Inknut Antiqua', serif;
+    border-radius: 5px;
+}
+
 .alicent { grid-area: alicent; }
 
 .rhaenyra { grid-area: rhaenyra; }
@@ -59,3 +69,18 @@ img {
 .laenor { grid-area: corlys; }
 
 .laena { grid-area: rhaenys; }
+
+.bioContainer {
+    font-family: 'Inknut Antiqua', serif;
+    color: black;
+    background-color: white;
+    margin-top: 10px;
+    margin-left: 20px;
+    width: 250px;
+    height: 200px;
+    font-size: 10px;
+}
+
+.AOD {
+    margin: 0 auto;
+}
